# capybara_group_cpp

./: .clangd  .gitignore  README.md  compile_commands.json  compile_commands_backup.json
document_proj/: CMakeLists.txt  README.md  compile_commands.json  data.csv  test1.txt  test2.txt
document_proj/app/: main.cpp
document_proj/include/: document.hpp  document_processor.hpp  pdf_document.hpp  spreadsheet_document.hpp  text_document.hpp
document_proj/src/: document_processor.cpp  pdf_document.cpp  spreadsheet_document.cpp  text_document.cpp
document_proj/tests/: tests.cpp
fst_proj/: CMakeLists.txt  a.out  main.cpp  pow_func.h
images_proj/: CMakeLists.txt  main.cpp
images_proj/app/: main.cpp
images_proj/include/: file_parser.hpp  history_manager.hpp  image.hpp  pixel.hpp
images_proj/src/: file_parser.cpp  history_manager.cpp  image.cpp  pixel.cpp
images_proj/tests/: tests.cpp
math_func/: .clang-format  CMakeLists.txt  pow_func.cpp
math_func/app/: main.cpp
math_func/include/: pow_func.h
math_func/tests/: test.cpp  test_functions.cpp
matrix_task/: .clang-tidy  CMakeLists.txt  README.md
matrix_task/app/: main.cpp
matrix_task/app/local/: io_funcs.cpp  io_funcs.hpp  utils.hpp
matrix_task/include/: add_sparse.h  compressor.h  decompressor.h  element.h  getElement.h  get_element.h  matrix.h
matrix_task/src/: add_sparse.c  add_sparse.cpp  compressor.cpp  dec  decompressor.cpp  element.cpp  element.h  getElement.cpp  get_element.cpp
matrix_task/tests/: add_sparse_tests.cpp  compressor_tests.cpp  decompressor_tests.cpp  getElement_tests.cpp  get_element_tests.cpp
protocol_proj/: CMakeLists.txt  Readme.md
protocol_proj/app/: main.cpp
protocol_proj/include/: connection.hpp  message.hpp  message_queue.hpp  protocol_handler.hpp
protocol_proj/src/: connection.cpp  message.cpp  message_queue.cpp  protocol_handler.cpp
protocol_proj/tests/: tests.cpp
str_program/: .clang-format  CMakeLists.txt  README.md
str_program/.cache/clangd/index/: compressor.cpp.A656230A47F3F561.idx  decompressor.cpp.1B216B6C4003755E.idx  decrypt-chesar.cpp.B33B8D9648222AE7.idx  encrypt-chesar.cpp.F2F1316C2F541D1F.idx  main.cpp.2BC4D772BD46A648.idx
str_program/app/: main.cpp
str_program/include/: compressor.h  decompressor.h  decrypt-chesar.h  encrypt-chesar.h
str_program/include/modes/: compressor.h  decrypt-chesar.h  encrypt-chesar.h
str_program/src/: compressor.cpp  decompressor.cpp  decrypt-chesar.cpp  encrypt-chesar.cpp
str_program/src/modes/: compressor.cpp  decompressor.cpp  decrypt-chesar.cpp  encrypt-chesar.cpp
str_program/tests/: decrypt_chesar_tests.cpp  encrypt_chesar_tests.cpp
str_program/tests/modes/: compressor_tests.cpp  decompressor_tests.cpp  decrypt_chesar_tests.cpp  encrypt_chesar_tests.cpp
students_proj/: .clang-format  CMakeLists.txt  README.md  data.txt  group.txt
students_proj/app/: main.cpp
students_proj/include/: group.hpp  output.hpp  outputGroupInfo.h  parsing.hpp  student.hpp
students_proj/src/: get_the_average_grade_of_the_group.cpp  get_the_max_grade_of_the_sudents.cpp  group.cpp  output.cpp  parsing.cpp  student.cpp
students_proj/tests/: parserTests.cpp
warehouse_proj/: CMakeLists.txt  README.md
warehouse_proj/app/: main.cpp
warehouse_proj/include/: item.hpp  item_comparator.hpp  safe_vector.hpp
warehouse_proj/tests/: tests.cpp
